k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "shopping"
  namespace: "agents-retail-eng"
spec:
  selector:
    app: "shopping"
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
